--- a/_sass/hamilton/layout.scss
+++ b/_sass/hamilton/layout.scss
@@ -127,7 +127,7 @@
   }
 
   .current-page {
-    text-decoration: line-through;
+    text-decoration: underline;
   }
 
   @media screen and (min-width: $on-medium) {
