almost done with Addressing problems in cultural way

--- a/_sass/hamilton/base.scss
+++ b/_sass/hamilton/base.scss
@@ -172,11 +172,11 @@ table {
 /**
  * Task item list
  */
-ul.task-list {
+ul.company-culture {
   li {
     list-style-type: none;
 
-    .task-list-item-checkbox {
+    .company-culture-item-checkbox {
       margin: 0 .2em .25em -1.6em;
       vertical-align: middle;
     }
